# egowalk-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
egowalk_dataset/camera/: camera_params.py
egowalk_dataset/datasets/base/: base_dataset.py  base_metadata.py  base_modalities.py  download.py
egowalk_dataset/datasets/gnm/: cutters.py  gnm_dataset.py  gnm_indexing.py
egowalk_dataset/datasets/trajectory/: geometry.py  trajectory.py
egowalk_dataset/misc/: constants.py  indexing.py
egowalk_dataset/util/: math.py  video.py
examples/: base_example.ipynb  gnm_example.ipynb  gnm_language_example.ipynb  trajectory_example.ipynb
